# MyPlayGround

./: README.md  serverless.md
AtCoderBegginerSelection/ABC081A.PlacingMarbles/: main.cpp
AtCoderBegginerSelection/ABC081B.ShiftOnly/: main.cpp
AtCoderBegginerSelection/ABC086A.Product/: main.cpp
BlogOS/blog_os/: Cargo.toml  x86_64-blog_os.json
BlogOS/blog_os/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
BlogOS/first_edition/: Cargo.toml  Makefile  Xargo.toml
Embedonomicon/app/: Cargo.toml
Embedonomicon/log/: Cargo.toml  log.x
Embedonomicon/rt/: Cargo.toml  asm.s  build.rs  link.x
LLVM/Kaleidoscope/: build.sh
MakeOsMyself/day01/: hello_os.asm
MakeOsMyself/day02/: Makefile  ipl.asm
MakeOsMyself/day03/: Makefile  asmhead.asm  bootpack.c  haribote.asm  ipl.asm  nasmfunc.asm
MakeOsMyself/day04/: bootpack.c  nasmfunc.asm
MakeOsMyself/day05/: Makefile  bootpack.c
MakeOsMyself/day06/: Makefile  asmhead.asm  bootpack.c  bootpack.h  dsctbl.c  graphic.c  int.c  ipl.asm  nasmfunc.asm
MakeOsMyself/day07/: bootpack.c  bootpack.h  bootpack.hrb  convert_hankaku.py  dsctbl.c  int.c
MakeOsMyself/day08/: Makefile  bootpack.c  bootpack.h  fifo.c  my_sprintf.c
MakeOsMyself/day09/: Makefile  bootpack.c  bootpack.h  int.c  keyboard.c  mouse.c  nasmfunc.asm
Rust/dining_philosophers/: Cargo.toml
Rust/functions/: Cargo.toml
Rust/guessing_game/: Cargo.toml
Rust/hello_world/: Cargo.toml
RustByExample/: .gitignore
Serverless/: .gitignore
decc/: .gitignore  Makefile  decc.c  test.sh
memos/: ubuntu_getting_started.md
(+173 files in other folders)
