[package]
name = "blog_os"
version = "0.1.0"
authors = ["tomoyuki-nakabayashi <tomo.wait.for.it.yuki@gmail.com>"]

[dependencies]
volatile = "0.2.3"

[profile.dev]
panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort" # disable stack unwinding on panic

[package.metadata.bootimage]
default-target = "x86_64-blog_os.json"
